# supply-chain-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  TODO.md  app.yaml  databricks.yml  deploy.sh  deploy_app.sh  deploy_notebook.py  dev.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  test_genie.py  test_local.py  test_mlflow.py  test_safety_stock.csv  test_sdk.py  test_token.py  vite.config.ts
.databricks/sync-snapshots/: f228a632bc660199.json
backend/: app.py  tools_skills_cache.db
backend/agent/: config.py  model.py  prompt.md
backend/skills/: analyze_safety_stock.md  consult_genie.md
backend/tools/: managed_mcp.py  registry.py  uc_tools.py  user_skills.py
backend/tools/mcp/: ask_genie.py  draft_purchase_order.py  get_erp_supplier_status.py  list_genies.py  manage_safety_stock.py  notify_slack_channel.py  query_lakehouse.py  read_skill.py
docs/: multi_agent_langgraph.md
evals/: run_llm_judge.py  test_agent.py  test_managed_mcp.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: create_ab_test_route.py  create_volumes.py  deploy_agent.py  enable_inference_tables.py  grant_sp_permissions.py  register_uc_tools.py  register_uc_tools.sql  seed_data.py  setup_uc.py  test_artifact.py  test_query.py  test_remote.py
src/: App.tsx  ArchitecturePresentation.tsx  ToolsAndSkillsModal.tsx  UserSkillsManager.tsx  index.css
