[project]
name = "edh-agent"
version = "0.1.0"
description = "EDH Agent (Qualcomm) on Databricks with the Databricks Agent Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "databricks-sdk",
    "databricks-agents",
    "mlflow",
    "mcp"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
